# code-atlas

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/code_atlas/: __init__.py  cli.py  config.py  enricher.py  installer.py  models.py  reporter.py  scanner.py  store.py
tests/: test_health.py  test_scanner.py  test_store.py
